CMS: add constraint to rcs_cms_imap.folder table