@@ -22,6 +22,9 @@ import com.gsma.rcs.provider.cms.CmsObject.DeleteStatus;
 import com.gsma.rcs.provider.cms.CmsObject.MessageType;
 import com.gsma.rcs.provider.cms.CmsObject.PushStatus;
 import com.gsma.rcs.provider.cms.CmsObject.ReadStatus;
+import com.gsma.rcs.utils.ContactUtilMockContext;
+import com.gsma.services.rcs.contact.ContactId;
+import com.gsma.services.rcs.contact.ContactUtil;
 
 import android.content.Context;
 import android.test.AndroidTestCase;
@@ -32,22 +35,30 @@ public class CmsLogTest extends AndroidTestCase {
 
     private CmsLog mCmsLog;
     private CmsLogTestIntegration mCmsLogTestIntegration;
-    private Context mContext;
 
     private CmsFolder[] mFolders;
     private CmsObject[] mMessages;
 
     protected void setUp() throws Exception {
         super.setUp();
-        mContext = getContext();
-        mCmsLog = CmsLog.getInstance(mContext);
-        mCmsLogTestIntegration = CmsLogTestIntegration.getInstance(mContext);
-
+        Context context = getContext();
+        mCmsLog = CmsLog.getInstance(context);
+        mCmsLogTestIntegration = CmsLogTestIntegration.getInstance(context);
+        ContactUtil contactUtils = ContactUtil.getInstance(new ContactUtilMockContext(context));
+        ContactId contact1 = contactUtils.formatContact("+330000000001");
+        ContactId contact2 = contactUtils.formatContact("+330000000002");
+        ContactId contact3 = contactUtils.formatContact("+330000000003");
+        String chatId4 = "chatId4";
         mFolders = new CmsFolder[] {
-                new CmsFolder("folder1", 1, 123, 1), new CmsFolder("folder2", 1, 1234, 1),
-                new CmsFolder("folder3", 1, 12345, 1)
+                new CmsFolder(com.gsma.rcs.core.cms.utils.CmsUtils.contactToCmsFolder(contact1), 1,
+                        123, 1),
+                new CmsFolder(com.gsma.rcs.core.cms.utils.CmsUtils.contactToCmsFolder(contact2), 1,
+                        1234, 1),
+                new CmsFolder(com.gsma.rcs.core.cms.utils.CmsUtils.contactToCmsFolder(contact3), 1,
+                        12345, 1),
+                new CmsFolder(com.gsma.rcs.core.cms.utils.CmsUtils.groupChatToCmsFolder(chatId4, chatId4), 1,
+                        123456, 1)
         };
-
         mMessages = new CmsObject[] {
                 new CmsObject(mFolders[0].getName(), 1, ReadStatus.UNREAD,
                         DeleteStatus.NOT_DELETED, PushStatus.PUSHED, MessageType.SMS, "messageId1",
@@ -68,7 +79,6 @@ public class CmsLogTest extends AndroidTestCase {
                         DeleteStatus.NOT_DELETED, PushStatus.PUSHED, MessageType.SMS, "messageId3",
                         null)
         };
-
         mCmsLog.removeFolders(false);
         mCmsLog.removeMessages();
     }
@@ -91,9 +101,9 @@ public class CmsLogTest extends AndroidTestCase {
 
     public void testAddMessage() {
         CmsObject message;
-        assertEquals(new Integer(0), mCmsLog.getMaxUidForMessages(mMessages[0].getFolder()));
+        assertEquals(Integer.valueOf(0), mCmsLog.getMaxUidForMessages(mMessages[0].getFolder()));
         mCmsLog.addMessage(mMessages[0]);
-        assertEquals(new Integer(1), mCmsLog.getMaxUidForMessages(mMessages[0].getFolder()));
+        assertEquals(Integer.valueOf(1), mCmsLog.getMaxUidForMessages(mMessages[0].getFolder()));
         message = mCmsLog.getMessage(mMessages[0].getFolder(), mMessages[0].getUid());
         assertEquals(mMessages[0], message);
 
@@ -102,42 +112,42 @@ public class CmsLogTest extends AndroidTestCase {
     }
 
     public void testGetFolders() {
-
         Map<String, CmsFolder> folders = mCmsLog.getFolders();
         assertEquals(0, folders.size());
 
         mCmsLog.addFolder(mFolders[0]);
         folders = mCmsLog.getFolders();
         assertEquals(1, folders.size());
-        assertTrue(folders.containsKey("folder1"));
+        assertTrue(folders.containsKey(mFolders[0].getName()));
 
         mCmsLog.addFolder(mFolders[0]);
         folders = mCmsLog.getFolders();
         assertEquals(1, folders.size());
-        assertTrue(folders.containsKey("folder1"));
+        assertTrue(folders.containsKey(mFolders[0].getName()));
 
         mCmsLog.addFolder(mFolders[1]);
         folders = mCmsLog.getFolders();
         assertEquals(2, folders.size());
-        assertTrue(folders.containsKey("folder1"));
-        assertTrue(folders.containsKey("folder2"));
+        assertTrue(folders.containsKey(mFolders[0].getName()));
+        assertTrue(folders.containsKey(mFolders[1].getName()));
 
         mCmsLog.addFolder(mFolders[2]);
         folders = mCmsLog.getFolders();
         assertEquals(3, folders.size());
-        assertTrue(folders.containsKey("folder1"));
-        assertTrue(folders.containsKey("folder2"));
-        assertTrue(folders.containsKey("folder3"));
+        assertTrue(folders.containsKey(mFolders[0].getName()));
+        assertTrue(folders.containsKey(mFolders[1].getName()));
+        assertTrue(folders.containsKey(mFolders[2].getName()));
     }
 
-    public void testUpdateFolder() {
+    public void testUpdateFolderSingle() {
         CmsFolder folder;
         mCmsLog.addFolder(mFolders[0]);
+        assertTrue(mCmsLog.isFolderPersisted(mFolders[0].getName()));
 
         folder = mCmsLogTestIntegration.getFolder(mFolders[0].getName());
         assertEquals(mFolders[0], folder);
 
-        mCmsLog.addFolder(new CmsFolder(mFolders[0].getName(), 0, 0, 0));
+        mCmsLog.updateFolder(new CmsFolder(mFolders[0].getName(), 0, 0, 0));
 
         folder = mCmsLogTestIntegration.getFolder(mFolders[0].getName());
         assertEquals(1, mCmsLog.getFolders().size());
@@ -146,41 +156,52 @@ public class CmsLogTest extends AndroidTestCase {
         assertEquals(Integer.valueOf(0), folder.getUidValidity());
     }
 
-    public void testRemoveFolder() {
+    public void testUpdateFolderGroup() {
+        CmsFolder folder;
+        CmsFolder groupFolder = mFolders[3];
+        String folderName = groupFolder.getName();
+        mCmsLog.addFolder(groupFolder);
+        assertTrue(mCmsLog.isFolderPersisted(folderName));
 
+        folder = mCmsLogTestIntegration.getFolder(folderName);
+        assertEquals(groupFolder, folder);
+
+        mCmsLog.updateFolder(new CmsFolder(folderName, 0, 0, 0));
+
+        folder = mCmsLogTestIntegration.getFolder(folderName);
+        assertEquals(1, mCmsLog.getFolders().size());
+        assertEquals(Integer.valueOf(0), folder.getModseq());
+        assertEquals(Integer.valueOf(0), folder.getNextUid());
+        assertEquals(Integer.valueOf(0), folder.getUidValidity());
+    }
+
+    public void testRemoveFolder() {
         for (CmsFolder folder : mFolders) {
             mCmsLog.addFolder(folder);
         }
         assertEquals(mFolders.length, mCmsLog.getFolders().size());
-
         for (int i = 0; i < mFolders.length; i++) {
             mCmsLog.removeFolder(mFolders[i].getName(), false);
             assertEquals(mFolders.length - (i + 1), mCmsLog.getFolders().size());
         }
-
     }
 
     public void testRemoveFolders() {
-
         for (CmsFolder folder : mFolders) {
             mCmsLog.addFolder(folder);
         }
         assertEquals(mFolders.length, mCmsLog.getFolders().size());
-
         mCmsLog.removeFolders(false);
         assertEquals(0, mCmsLog.getFolders().size());
     }
 
     public void testGetMessages() {
-
         Map<Integer, CmsObject> messages = mCmsLogTestIntegration.getMessages();
         assertEquals(0, messages.size());
-
         for (int i = 0; i < mMessages.length; i++) {
             mCmsLog.addMessage(mMessages[i]);
             assertEquals(i + 1, mCmsLogTestIntegration.getMessages().size());
         }
-
         messages = mCmsLogTestIntegration.getMessages(mFolders[0].getName());
         assertEquals(1, messages.size());
         assertEquals(mMessages[0], messages.get(mMessages[0].getUid()));
@@ -196,27 +217,23 @@ public class CmsLogTest extends AndroidTestCase {
         assertEquals(mMessages[4], messages.get(mMessages[4].getUid()));
         assertEquals(mMessages[5], messages.get(mMessages[5].getUid()));
 
-        for (int i = 0; i < mMessages.length; i++) {
-            assertEquals(mMessages[i],
-                    mCmsLog.getMessage(mMessages[i].getFolder(), mMessages[i].getUid()));
+        for (CmsObject mMessage : mMessages) {
+            assertEquals(mMessage,
+                    mCmsLog.getMessage(mMessage.getFolder(), mMessage.getUid()));
         }
-
-        for (int i = 0; i < mMessages.length; i++) {
+        for (CmsObject mMessage : mMessages) {
             assertEquals(
-                    mMessages[i],
-                    mCmsLogTestIntegration.getMessage(mMessages[i].getFolder(),
-                            mMessages[i].getMessageId()));
+                    mMessage,
+                    mCmsLogTestIntegration.getMessage(mMessage.getFolder(),
+                            mMessage.getMessageId()));
         }
-
-        for (int i = 0; i < mMessages.length; i++) {
-            assertTrue(mCmsLog.getMessageId(mMessages[i].getFolder(), mMessages[i].getUid()) != CmsLog.INVALID_ID);
+        for (CmsObject mMessage : mMessages) {
+            assertTrue(mCmsLog.getMessageId(mMessage.getFolder(), mMessage.getUid()) != CmsLog.INVALID_ID);
         }
-
-        for (int i = 0; i < mMessages.length; i++) {
-            assertEquals(mMessages[i].getUid(),
-                    mCmsLog.getUidForXmsMessage(mMessages[i].getMessageId()));
+        for (CmsObject mMessage : mMessages) {
+            assertEquals(mMessage.getUid(),
+                    mCmsLog.getUidForXmsMessage(mMessage.getMessageId()));
         }
-
     }
 
     public void testUpdateMessage() {
@@ -237,21 +254,17 @@ public class CmsLogTest extends AndroidTestCase {
     }
 
     public void testRemoveMessages() {
-
         for (CmsObject message : mMessages) {
             mCmsLog.addMessage(message);
         }
         assertEquals(mMessages.length, mCmsLogTestIntegration.getMessages().size());
-
         for (int i = 0; i < mMessages.length; i++) {
             mCmsLogTestIntegration.removeMessage(mMessages[i].getFolder(), mMessages[i].getUid());
             assertEquals(mMessages.length - (i + 1), mCmsLogTestIntegration.getMessages().size());
         }
-
     }
 
     public void testRemoveAllMessages() {
-
         for (CmsObject message : mMessages) {
             mCmsLog.addMessage(message);
         }
